<resources>
    <string name="app_name">Mi Perfil</string>
    <string name="welcome_title">Mi Perfil</string>
    <string name="welcome_message">Bienvenido. Completa tu informacion personal y revisa el resumen de tu perfil guardado.</string>
    <string name="start_button">Iniciar</string>
    <string name="register_title">Registro de Perfil</string>
    <string name="register_message">Ingresa tus datos personales para crear tu perfil.</string>
    <string name="full_name_hint">Nombres y apellidos</string>
    <string name="email_hint">Correo electronico</string>
    <string name="phone_hint">Numero de telefono</string>
    <string name="birth_date_hint">Fecha de nacimiento</string>
    <string name="birth_date_helper">Formato: dd/mm/aaaa</string>
    <string name="address_hint">Direccion de residencia</string>
    <string name="take_photo_button">Tomar Foto</string>
    <string name="save_button">Guardar</string>
    <string name="camera_status_default">Aun no se ha solicitado permiso para la camara.</string>
    <string name="camera_permission_granted">El usuario concedio el permiso para la camara.</string>
    <string name="camera_permission_denied">No se puede acceder a la camara porque el permiso fue denegado.</string>
    <string name="required_field_error">Este campo es obligatorio.</string>
    <string name="email_format_error">Ingresa un correo electronico valido.</string>
    <string name="phone_format_error">Ingresa un telefono valido de 8 a 15 digitos.</string>
    <string name="date_format_error">Ingresa una fecha valida con formato dd/mm/aaaa.</string>
    <string name="profile_saved_title">Perfil Guardado</string>
    <string name="profile_saved_message">Resumen de la informacion personal ingresada.</string>
    <string name="summary_full_name_label">Nombres y apellidos</string>
    <string name="summary_email_label">Correo electronico</string>
    <string name="summary_phone_label">Numero de telefono</string>
    <string name="summary_birth_date_label">Fecha de nacimiento</string>
    <string name="summary_address_label">Direccion de residencia</string>
    <string name="back_home_button">Regresar al inicio</string>
    <string name="new_profile_button">Nuevo perfil</string>
</resources>
